--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=5.5",
+        "ext-redis": "*",
         "symfony/framework-bundle": "~2.7|~3.0|^4.0",
         "symfony/translation": "~2.7|~3.0|^4.0",
         "predis/predis": "~1.0"
